<resources>
    <string name="app_name">EpicCO2App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="not_signed_in_yet_sign_in_here">Not signed in yet? Sign in here</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account_login_here">Already have an account? Sign in here</string>
    <string name="signin">Sign in</string>
    <string name="kuukausi_yhteenveto">Kuukausi yhteenveto</string>
    <string name="viikko_yhteenveto">Viikko yhteenveto</string>
    <string name="aika">Aika</string>
    <string name="_1_kk">1 kk</string>
    <string name="_12_kk">12 kk</string>
    <string name="_3_kk">3 kk</string>
    <string name="painon_muutos">Painon muutos</string>
    <string name="k_ytt_j_n_tiedot">Käyttäjän tiedot</string>
    <string name="painoindeksi">Painoindeksi</string>
    <string name="pituus">Pituus</string>
    <string name="paino">Paino</string>
    <string name="p_ivit">Päivitä</string>
    <string name="textview">TextView</string>
    <string name="sed_t_koodaa">Sedät koodaa</string>
    <string name="Käyttäjä" />

    <string-array name="diets">
        <item>Kaikkiruokainen</item>
        <item>Kasvissyöjä</item>
        <item>Vegaani</item>

    </string-array>
</resources>